# backend/basic/model/process.go
@@ -1,0 +1,14 @@
+package model
+
+type Process struct {
+	UID   string
+	PPID  string
+	C     string
+	SZ    string
+	RSS   string
+	PSR   string
+	STIME string
+	TTY   string
+	TIME  string
+	CMD   string
+}
