# backend/basic/model/script.go
@@ -1,0 +1,9 @@
+package model
+
+type Script struct {
+	Script string
+}
+
+type ExecuteResult struct {
+	Output string
+}
